syntax = "proto3";
package pb;

import "base.proto";

option go_package = "api/pb";

service MessageSvc {
  rpc List(MessageRequest) returns (MessagesReply) {}
  rpc Get(MessageRequest) returns (MessageReply) {}
  rpc Create(MessageRequest) returns (MessageReply) {}
  rpc Delete(MessageRequest) returns (TextReply) {}
  rpc Send(MessageRequest) returns (StateReply) {}
  rpc Run(MessageRequest) returns (TextReply) {}
  rpc GetActionMessages(TextRequest) returns (ActionReply) {}
  rpc CreateActionMessage(TextRequest) returns (StateReply) {}
  rpc DeleteWorkflowMessage(MessageRequest) returns (StateReply) {}
}

message MessageRequest {
  Message message = 1;
}

message MessageReply {
  Message message = 1;
}

message MessagesReply {
  repeated Message messages = 2;
}

message Message {
  // @inject_tag: db:"id"
  int64 id = 1;
  // @inject_tag: db:"uuid"
  string uuid = 2;
  // @inject_tag: db:"text"
  string text = 3;
  // @inject_tag: db:"type"
  string type = 4;
  // @inject_tag: db:"channel"
  string channel = 5;
  // @inject_tag: db:"created_at"
  string createdAt = 6;
}

message Action {
  int64 id = 1;
  string text = 2;
}

message ActionReply {
  repeated Action items = 1;
}
